# learn_program

./: .gitignore
Android/FirstJava/: settings.gradle
Android/quick_start/: settings.gradle
C/tutorial/: array.c  dyn_allo.c  hello.c  linked_list.c  multi_dim_array.c  string.c  struct.c  union.c
Elixir/: concat.exs  hi.exs  map_reduce.exs  math.exs  process.exs  recursion.exs  zero.exs
Elixir/first_mix/: .gitignore  mix.exs
Elixir/hi_phx_umbrella/: README.md  mix.exs
Elixir/islands/: mix.exs
Elixir/islands_engine/: mix.exs
Elixir/nx_tests/: pos_tests.livemd
Gleam/generics/: gleam.toml
Gleam/test_gleam/: gleam.toml
Java/: .gitignore  Rainbow Brackets color scheme.icls  newLineBrace.xml
Java/hello/: Koch.java
Julia/: hash_collisions.jl
Julia/CS230tests/: no_more_appear_twice_in_5_digits.jl  rgb_balls.jl
Julia/symbolics/: derivatives.jl
Julia/tutorial/: args.jl  arithmetic_operators.jl  functions.jl  names.jl  numeric_comparitors.jl  setprecision.jl  string.jl  typeextreme.jl  varargs.jl
Matlab/tutorial/: main_computation.m
Python/: condapacks.txt
Python/fedml_simulation/: fedml_config.yaml
Python/intermediatePython/: collections.py  dict.py  itertools.py  lambda.py  list.py  set.py  string.py  tuple.py
Python/python files/: ed_spam.py
Python/python lessons/: calculation.py  condition.py  dictionary.py  file.py  function.py  input.py  list.py  loop.py  main.py  regex.py  set.py  tuple.py  variables.py
Rust/tutorial/release_profile/: Cargo.toml
Wolfram Mathematica/: .gitignore  hello.wl
macOS script/: prevenTouchBarSleep.scpt
(+376 files in other folders)
